gitignore: ignore taken from erpnext
Signed-off-by: Syed Mujeer Hashmi <mujeerhashmi@4csolutions.in>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-.DS_Store
 *.pyc
+*.py~
+.DS_Store
+conf.py
+locale
+latest_updates.json
+.wnf-lang-status
 *.egg-info
-*.swp
-tags
+dist/
 website_4cs/docs/current
+*.swp
+*.swo
+__pycache__
+*~
+.idea/
+.vscode/
+node_modules/
+tags
